--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
 *{margin: 0; padding: 0; box-sizing: border-box; font : inherit; color: inherit;}
 a{text-decoration: none;}
 ul,ol{list-style: none;}
-html{font-size: 10px;}
+html{font-size: 10px; scroll-behavior: smooth;}
 body{
     font-size: 1.6rem; 
     color: #222; 
